tests/baselines/reference/incrementAndDecrement.errors.txt
==== tests/cases/conformance/expressions/operators/incrementAndDecrement.ts (21 errors) ====
    enum E { A, B, C };
    var x = 4;
    var e = E.B;
    var a: any;
    var w = window;
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    
    // Assign to expression++
    x++ = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to expression--
    x-- = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to++expression
    ++x = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to--expression
    --x = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Pre and postfix++ on number
    x++;
    x--;
    ++x;
    --x;
    ++x++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --x--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++x--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --x++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // Pre and postfix++ on enum
    e++;
    e--;
    ++e;
    --e;
    ++e++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --e--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++e--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --e++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // Pre and postfix++ on value of type 'any'
    a++;
    a--;
    ++a;
    --a;
    ++a++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --a--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++a--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --a++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    
    // Pre and postfix++ on other types
    w++; // Error
    w--; // Error
    ++w; // Error
    --w; // Error
    ++w++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --w--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++w--; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --w++; // Error
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    
    